fix: code editor chrome and scrollbar styles

--- a/src/index.css
+++ b/src/index.css
@@ -79,30 +79,35 @@ body {
 
 /* SCROLLBAR */
 
-/* ::-webkit-scrollbar { */
-/*   width: 16px; */
-/* } */
-/**/
-/* ::-webkit-scrollbar-thumb { */
-/*   background-clip: content-box; */
-/*   background-color: #999; */
-/*   border: 5px solid transparent; */
-/*   border-radius: 20px; */
-/*   transition: background-color 500ms ease-in-out; */
-/* } */
-/**/
-/* ::-webkit-scrollbar-track { */
-/*   background-color: transparent; */
-/*   transition: background-color 500ms ease-in-out; */
-/* } */
-/**/
-/* html.dark ::-webkit-scrollbar-thumb { */
-/*   background-color: #aaa; */
-/* } */
-/**/
-/* html.dark ::-webkit-scrollbar-track { */
-/*   background-color: #0e141b; */
-/* } */
+::-webkit-scrollbar {
+  width: 16px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-clip: content-box;
+  background-color: #999;
+  border: 5px solid transparent;
+  border-radius: 20px;
+  transition: background-color 500ms ease-in-out;
+}
+
+
+html.dark,
+html.dark .shiki {
+  &::-webkit-scrollbar-thumb {
+    background-color: #aaa;
+  }
+
+  &::-webkit-scrollbar-track {
+    @apply bg-gray-900/60;
+  }
+
+  &::-webkit-scrollbar-thumb:hover {
+    cursor: grab;
+    opacity: 0.8;
+  }
+
+}
 
 /* NAV */
 
